name:               tangles
version:            0.0
author:             Alexander Mishunin
maintainer:         alexander.mishunin@gmail.com
stability:          Experimental
license:            LGPL-3
license-file:       LICENSE
synopsis:           Enumeration algorithms for some knot theory objects
description:        See http://arxiv.org/abs/0712.3859
category:           Math
build-type:         Simple
cabal-version:      >=1.14
homepage:           http://github.com/mishun/tangles/


source-repository head
    type:     git
    location: https://github.com/mishun/tangles.git
    subdir:   code/


flag enable-test-modules
    description: Compile and export test modules
    default:     False


library
    default-language:   Haskell2010
    default-extensions:
        BangPatterns,
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        MultiParamTypeClasses
    ghc-options:        -Wall
    ghc-prof-options:   -prof -auto-all -caf-all
    cc-options:         -Wall -std=c++11
    build-depends:
        base >=4.6,
        vector >=0.10,
        array,
        deepseq,
        parallel,
        mtl,
        containers,
        bytestring,
        template-haskell,
        disjoint-set,
        IfElse,
        HaskellForMaths,
        diagrams-lib >=1.0
    hs-source-dirs:     src
    c-sources:
        src/Math/Topology/Manifolds/SurfaceGraph/Embedding/Optimization.cpp
        src/Math/Topology/Manifolds/SurfaceGraph/SphereStar/Backtrack.cpp
    extra-libraries:    stdc++ gsl gslcblas
    include-dirs:       src/
    exposed-modules:
        Math.Algebra.Group.D4,
        Math.Algebra.Group.Dn,
        Math.Algebra.PlanarAlgebra,
        Math.Algebra.RotationDirection,
        Math.Combinatorics.ChordDiagram,
        Math.Combinatorics.ChordDiagram.Draw,
        Math.Combinatorics.Generation.CanonicalConstructionPath,
        Math.Combinatorics.Strings.Lyndon,
        Math.Topology.KnotTh.Crossings.Diagram,
        Math.Topology.KnotTh.Crossings.Projection,
        Math.Topology.KnotTh.Crossings.SubTangle,
        Math.Topology.KnotTh.Draw,
        Math.Topology.KnotTh.EmbeddedLink,
        Math.Topology.KnotTh.EmbeddedLink.Construction,
        Math.Topology.KnotTh.EmbeddedLink.TangleStarGlue,
        Math.Topology.KnotTh.EmbeddedLink.TestPrime,
        Math.Topology.KnotTh.Enumeration.Applied.NonAlternatingTangles,
        Math.Topology.KnotTh.Enumeration.DiagramInfo,
        Math.Topology.KnotTh.Enumeration.DiagramInfo.AllDiagramsInfo,
        Math.Topology.KnotTh.Enumeration.DiagramInfo.MinimalDiagramInfo,
        Math.Topology.KnotTh.Enumeration.EquivalenceClasses,
        Math.Topology.KnotTh.Enumeration.SiftByInvariant,
        Math.Topology.KnotTh.Invariants,
        Math.Topology.KnotTh.Knotted,
        Math.Topology.KnotTh.Link,
        Math.Topology.KnotTh.Link.Table,
        Math.Topology.KnotTh.Tangle,
        Math.Topology.KnotTh.Tangle.Generation.BorderIncremental,
        Math.Topology.KnotTh.Tangle.Generation.FlypeClasses,
        Math.Topology.KnotTh.Tangle.Generation.FlypeClasses.Flypes,
        Math.Topology.KnotTh.Tangle.Satellites,
        Math.Topology.Manifolds.SurfaceGraph
    other-modules:
        Internal.Macro,
        Math.Algebra.PlanarAlgebra.Definition,
        Math.Algebra.PlanarAlgebra.Reduction,
        Math.Combinatorics.ChordDiagram.Definition,
        Math.Combinatorics.ChordDiagram.Generator,
        Math.Topology.KnotTh.Draw.DrawCrossing,
        Math.Topology.KnotTh.Draw.EmbeddedLink,
        Math.Topology.KnotTh.Draw.Link,
        Math.Topology.KnotTh.Draw.Settings,
        Math.Topology.KnotTh.Draw.Tangle,
        Math.Topology.KnotTh.EmbeddedLink.Definition.EdgeIndicesEncoding,
        Math.Topology.KnotTh.EmbeddedLink.Definition.EmbeddedLink,
        Math.Topology.KnotTh.Invariants.HomflyPolynomial,
        Math.Topology.KnotTh.Invariants.JonesPolynomial,
        Math.Topology.KnotTh.Invariants.KauffmanFPolynomial,
        Math.Topology.KnotTh.Invariants.KauffmanXPolynomial,
        Math.Topology.KnotTh.Invariants.KnotPolynomials,
        Math.Topology.KnotTh.Invariants.KnotPolynomials.KauffmanFStateSum,
        Math.Topology.KnotTh.Invariants.KnotPolynomials.KauffmanXStateSum,
        Math.Topology.KnotTh.Invariants.LinkingNumber,
        Math.Topology.KnotTh.Invariants.Util.Poly,
        Math.Topology.KnotTh.Knotted.Definition,
        Math.Topology.KnotTh.Knotted.TH.Knotted,
        Math.Topology.KnotTh.Knotted.Threads,
        Math.Topology.KnotTh.Link.Definition.GaussCode,
        Math.Topology.KnotTh.Link.Definition.Link,
        Math.Topology.KnotTh.Link.Definition.Misc,
        Math.Topology.KnotTh.Link.Table.Access,
        Math.Topology.KnotTh.Link.Table.List,
        Math.Topology.KnotTh.Link.Table.Special,
        Math.Topology.KnotTh.Moves.AdHocOfTangle,
        Math.Topology.KnotTh.Moves.AdHocOfTangle.Resting,
        Math.Topology.KnotTh.Moves.Modify,
        Math.Topology.KnotTh.Moves.Moves,
        Math.Topology.KnotTh.Moves.PatternMatching,
        Math.Topology.KnotTh.Tabulation.LinkDiagrams,
        Math.Topology.KnotTh.Tangle.Definition.Braid,
        Math.Topology.KnotTh.Tangle.Definition.CascadeCode,
        Math.Topology.KnotTh.Tangle.Definition.Misc,
        Math.Topology.KnotTh.Tangle.Definition.Tangle,
        Math.Topology.KnotTh.Tangle.Definition.TangleLike,
        Math.Topology.KnotTh.Tangle.Generation.BorderIncremental.IncrementalTests,
        Math.Topology.KnotTh.Tangle.Generation.BorderIncremental.RootingTest,
        Math.Topology.Manifolds.SurfaceGraph.Barycentric,
        Math.Topology.Manifolds.SurfaceGraph.Definition,
        Math.Topology.Manifolds.SurfaceGraph.Embedding,
        Math.Topology.Manifolds.SurfaceGraph.Embedding.Optimization,
        Math.Topology.Manifolds.SurfaceGraph.Embedding.QuadraticInitialization,
        Math.Topology.Manifolds.SurfaceGraph.Embedding.RelaxEmbedding,
        Math.Topology.Manifolds.SurfaceGraph.SphereStar,
        Math.Topology.Manifolds.SurfaceGraph.SphereStar.Backtrack,
        Math.Topology.Manifolds.SurfaceGraph.Util
    if flag(enable-test-modules)
        build-depends:
            HUnit,
            QuickCheck ==2.*,
            test-framework,
            test-framework-hunit,
            test-framework-quickcheck2,
            diagrams-svg >= 1.0,
            diagrams-postscript >= 1.0,
            blaze-svg
        exposed-modules:
            Math.Combinatorics.ChordDiagram.Test,
            Math.Combinatorics.Strings.Test,
            Math.Topology.KnotTh.EmbeddedLink.Test,
            Math.Topology.KnotTh.Enumeration.Applied.Test,
            Math.Topology.KnotTh.Invariants.Test,
            Math.Topology.KnotTh.Moves.Test,
            Math.Topology.KnotTh.Tangle.Generation.Test,
            Math.Topology.KnotTh.Tangle.Test
            TestUtil.Drawing
            TestUtil.Table
            TestUtil.TestCollection
    else
        other-modules:


flag enable-GraphDrawingBenchmark
    default: False

benchmark GraphDrawingBenchmark
    if !(flag(enable-test-modules) && flag(enable-GraphDrawingBenchmark))
        buildable: False
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    default-extensions: BangPatterns
    ghc-options:        -threaded
    ghc-prof-options:   -rtsopts -prof -auto-all -caf-all
    build-depends:
        base >=4.6,
        array,
        mtl,
        diagrams-lib >=1.0,
        tangles
    main-is:            GraphDrawingBenchmark.hs
    hs-source-dirs:     test


flag enable-TangleGeneratorBenchmark
    default: False

benchmark TangleGeneratorBenchmark
    if !(flag(enable-test-modules) && flag(enable-TangleGeneratorBenchmark))
        buildable: False
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    default-extensions: BangPatterns
    ghc-options:        -threaded
    ghc-prof-options:   -rtsopts -prof -auto-all -caf-all
    build-depends:
        base >=4.6,
        mtl,
        containers,
        diagrams-lib >=1.0,
        tangles
    main-is:            TangleGeneratorBenchmark.hs
    hs-source-dirs:     test


flag enable-NonAlternatingBenchmark
    default: False

benchmark NonAlternatingBenchmark
    if !(flag(enable-test-modules) && flag(enable-NonAlternatingBenchmark))
        buildable: False
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    default-extensions: BangPatterns
    ghc-options:        -threaded
    ghc-prof-options:   -rtsopts -prof -auto-all -caf-all
    build-depends:
        base >=4.6,
        array,
        mtl,
        containers,
        diagrams-lib >=1.0,
        tangles
    main-is:            NonAlternatingBenchmark.hs
    hs-source-dirs:     test


flag enable-KnotPolynomialsBenchmark
    default: False

benchmark KnotPolynomialsBenchmark
    if !(flag(enable-test-modules) && flag(enable-KnotPolynomialsBenchmark))
        buildable: False
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    default-extensions: BangPatterns
    ghc-options:        -threaded
    ghc-prof-options:   -rtsopts -prof -auto-all -caf-all
    build-depends:
        base >=4.6,
        array,
        mtl,
        containers,
        criterion,
        tangles
    main-is:            KnotPolynomialsBenchmark.hs
    hs-source-dirs:     test


flag enable-VirtualBenchmark
    default: False

benchmark VirtualBenchmark
    if !(flag(enable-test-modules) && flag(enable-VirtualBenchmark))
        buildable: False
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    default-extensions: BangPatterns
    ghc-options:        -threaded
    ghc-prof-options:   -rtsopts -prof -auto-all -caf-all
    build-depends:
        base >=4.6,
        array,
        mtl,
        containers,
        criterion,
        diagrams-lib >=1.0,
        tangles
    main-is:            VirtualBenchmark.hs
    hs-source-dirs:     test


flag enable-ChordDiagramsBenchmark
    default: False

benchmark ChordDiagramsBenchmark
    if !(flag(enable-test-modules) && flag(enable-ChordDiagramsBenchmark))
        buildable: False
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    default-extensions: BangPatterns
    ghc-options:        -threaded
    ghc-prof-options:   -rtsopts -prof -auto-all -caf-all
    build-depends:
        base >=4.6,
        array,
        mtl,
        containers,
        criterion,
        diagrams-lib >=1.0,
        tangles
    main-is:            ChordDiagramsBenchmark.hs
    hs-source-dirs:     test


test-suite TestTangles
    if !flag(enable-test-modules)
        buildable: False
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    default-extensions: BangPatterns
    ghc-options:        -O -threaded
    ghc-prof-options:   -rtsopts -prof -auto-all -caf-all
    build-depends:
        base >=4.6,
        test-framework,
        tangles
    main-is:            TestTangles.hs
    hs-source-dirs:     test


executable TestMoves
    if !flag(enable-test-modules)
        buildable: False
    default-language:   Haskell2010
    ghc-options:        -threaded
    build-depends:
        base >=4.6,
        diagrams-lib >=1.0,
        tangles
    main-is:            TestMoves.hs
    hs-source-dirs:     test

