name:               tangles
version:            0.0
author:             Alexander Mishunin
maintainer:         alexander.mishunin@gmail.com
stability:          Experimental
license:            LGPL-3
license-file:       LICENSE
synopsis:           Enumeration algorithms for some knot theory objects
description:        See http://arxiv.org/abs/0712.3859
category:           Math
build-type:         Simple
cabal-version:      >=1.18
homepage:           http://github.com/mishun/tangles/


source-repository head
    type:     git
    location: https://github.com/mishun/tangles.git


flag internal-tests
    description: Export test modules and functions
    default:     False


library
    default-language:   Haskell2010
    default-extensions:
        BangPatterns,
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        MultiParamTypeClasses
    ghc-options:        -Wall
    ghc-prof-options:   -prof -auto-all -caf-all
    cc-options:         -Wall -std=c++11
    build-depends:
        base >=4.6,
        vector >=0.10,
        array,
        deepseq,
        parallel,
        mtl,
        containers,
        bytestring,
        template-haskell,
        disjoint-set,
        IfElse,
        HaskellForMaths,
        diagrams-lib ==1.2.*
    hs-source-dirs:     src
    c-sources:
        src/Math/Topology/Manifolds/SurfaceGraph/Embedding/Optimization.cpp
        src/Math/Topology/Manifolds/SurfaceGraph/SphereStar/Backtrack.cpp
    extra-libraries:    stdc++ gsl gslcblas
    include-dirs:       src/
    exposed-modules:
        Math.Algebra.Group.D4,
        Math.Algebra.Group.Dn,
        Math.Algebra.PlanarAlgebra,
        Math.Algebra.RotationDirection,
        Math.Combinatorics.ChordDiagram,
        Math.Combinatorics.ChordDiagram.Draw,
        Math.Combinatorics.Generation.CanonicalConstructionPath,
        Math.Combinatorics.Strings.Lyndon,
        Math.Topology.KnotTh.Crossings.Diagram,
        Math.Topology.KnotTh.Crossings.Projection,
        Math.Topology.KnotTh.Crossings.SubTangle,
        Math.Topology.KnotTh.Draw,
        Math.Topology.KnotTh.EdgeIndicesEncoding,
        Math.Topology.KnotTh.EmbeddedLink,
        Math.Topology.KnotTh.Enumeration.Applied.NonAlternatingTangles,
        Math.Topology.KnotTh.Enumeration.DiagramInfo,
        Math.Topology.KnotTh.Enumeration.DiagramInfo.AllDiagramsInfo,
        Math.Topology.KnotTh.Enumeration.DiagramInfo.MinimalDiagramInfo,
        Math.Topology.KnotTh.Enumeration.EquivalenceClasses,
        Math.Topology.KnotTh.Enumeration.SiftByInvariant,
        Math.Topology.KnotTh.Invariants,
        Math.Topology.KnotTh.Invariants.KhovanovHomology,
        Math.Topology.KnotTh.Knotted,
        Math.Topology.KnotTh.Link,
        Math.Topology.KnotTh.Moves.Moves,
        Math.Topology.KnotTh.Moves.MovesOfELink,
        Math.Topology.KnotTh.Moves.PatternMatching,
        Math.Topology.KnotTh.Moves.AdHoc,
        Math.Topology.KnotTh.SurfaceLink,
        Math.Topology.KnotTh.Tabulation.LinkDiagrams,
        Math.Topology.KnotTh.Tabulation.TangleDiagramsCascade,
        Math.Topology.KnotTh.Tabulation.TangleFlypeClasses,
        Math.Topology.KnotTh.Tabulation.TangleStarGlue,
        Math.Topology.KnotTh.Tangle,
        Math.Topology.Manifolds.SurfaceGraph,
        Math.Topology.Manifolds.SurfaceGraph.Homology
    other-modules:
        Math.Algebra.PlanarAlgebra.Definition,
        Math.Algebra.PlanarAlgebra.Reduction,
        Math.Combinatorics.ChordDiagram.Definition,
        Math.Combinatorics.ChordDiagram.Generator,
        Math.Topology.KnotTh.Draw.DrawCrossing,
        Math.Topology.KnotTh.Draw.Settings,
        Math.Topology.KnotTh.Invariants.HomflyPolynomial,
        Math.Topology.KnotTh.Invariants.JonesPolynomial,
        Math.Topology.KnotTh.Invariants.KauffmanFPolynomial,
        Math.Topology.KnotTh.Invariants.KauffmanXPolynomial,
        Math.Topology.KnotTh.Invariants.KnotPolynomials,
        Math.Topology.KnotTh.Invariants.KnotPolynomials.KauffmanFStateSum,
        Math.Topology.KnotTh.Invariants.KnotPolynomials.KauffmanXStateSum,
        Math.Topology.KnotTh.Invariants.KnotPolynomials.Surface,
        Math.Topology.KnotTh.Invariants.LinkingNumber,
        Math.Topology.KnotTh.Knotted.Definition,
        Math.Topology.KnotTh.Knotted.Threads,
        Math.Topology.KnotTh.Link.TableOfCodes,
        Math.Topology.KnotTh.Moves.AdHoc.Resting,
        Math.Topology.KnotTh.Tangle.Braid,
        Math.Topology.KnotTh.Tangle.CascadeCode,
        Math.Topology.KnotTh.Tangle.Misc,
        Math.Topology.KnotTh.Tangle.Tangle,
        Math.Topology.KnotTh.Tangle.TangleLike,
        Math.Topology.KnotTh.Tabulation.TangleDiagramsCascade.IncrementalTests,
        Math.Topology.KnotTh.Tabulation.TangleDiagramsCascade.RootingTest,
        Math.Topology.KnotTh.Tabulation.TangleFlypeClasses.Flypes,
        Math.Topology.Manifolds.SurfaceGraph.Barycentric,
        Math.Topology.Manifolds.SurfaceGraph.Definition,
        Math.Topology.Manifolds.SurfaceGraph.Embedding,
        Math.Topology.Manifolds.SurfaceGraph.Embedding.Optimization,
        Math.Topology.Manifolds.SurfaceGraph.Embedding.QuadraticInitialization,
        Math.Topology.Manifolds.SurfaceGraph.Embedding.RelaxEmbedding,
        Math.Topology.Manifolds.SurfaceGraph.SphereStar,
        Math.Topology.Manifolds.SurfaceGraph.SphereStar.Backtrack,
        Math.Topology.Manifolds.SurfaceGraph.Util
    if flag(internal-tests)
        cpp-options:        -DTESTING
        exposed-modules:
            Math.Topology.KnotTh.Invariants.Util.Poly
    else
        other-modules:
            Math.Topology.KnotTh.Invariants.Util.Poly


test-suite TestTangles
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    default-extensions: BangPatterns, CPP
    ghc-options:        -Wall -threaded
    ghc-prof-options:   -rtsopts -prof -auto-all -caf-all
    build-depends:
        base >=4.6,
        containers,
        mtl,
        parallel,
        HaskellForMaths,
        HUnit,
        QuickCheck ==2.*,
        test-framework,
        test-framework-hunit,
        test-framework-quickcheck2,
        tangles
    main-is:            TestTangles.hs
    other-modules:
        Math.Combinatorics.ChordDiagram.Test,
        Math.Combinatorics.Strings.Test,
        Math.Topology.KnotTh.EmbeddedLink.Test,
        Math.Topology.KnotTh.Enumeration.Applied.Test,
        Math.Topology.KnotTh.Invariants.KhovanovHomology.Test,
        Math.Topology.KnotTh.Invariants.Test,
        Math.Topology.KnotTh.Moves.Test,
        Math.Topology.KnotTh.Tabulation.Test,
        Math.Topology.KnotTh.Tangle.Test,
        TestUtil.Table
    hs-source-dirs:     test
    if flag(internal-tests)
        cpp-options:        -DTESTING


benchmark TangleGeneratorBenchmark
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    default-extensions: BangPatterns
    ghc-options:        -threaded
    ghc-prof-options:   -rtsopts -prof -auto-all -caf-all
    build-depends:
        base >=4.6,
        mtl,
        containers,
        diagrams-lib ==1.2.*,
        tangles
    main-is:            TangleGeneratorBenchmark.hs
    hs-source-dirs:     test


benchmark KnotPolynomialsBenchmark
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    default-extensions: BangPatterns
    ghc-options:        -threaded
    ghc-prof-options:   -rtsopts -prof -auto-all -caf-all
    build-depends:
        base >=4.6,
        array,
        mtl,
        containers,
        criterion,
        tangles
    main-is:            KnotPolynomialsBenchmark.hs
    hs-source-dirs:     test
