name:               tangles
version:            0.0
author:             Alexander Mishunin
maintainer:         alexander.mishunin@gmail.com
stability:          Experimental
license:            LGPL-3
license-file:       LICENSE
synopsis:           Enumeration algorithms for some knot theory objects
description:        See http://arxiv.org/abs/0712.3859
category:           Math
build-type:         Simple
cabal-version:      >=1.18
homepage:           http://github.com/mishun/tangles/


source-repository head
    type:     git
    location: https://github.com/mishun/tangles.git


flag internal-tests
    description: Export test modules and functions
    default:     False


library
    default-language:   Haskell2010
    default-extensions: BangPatterns
    ghc-options:        -Wall
    ghc-prof-options:   -prof -auto-all -caf-all
    cc-options:         -Wall -std=c++11
    build-depends:
        base >=4.6,
        vector >=0.10,
        array,
        matrix,
        deepseq,
        parallel,
        mtl,
        containers,
        bytestring,
        template-haskell,
        disjoint-set,
        IfElse,
        HaskellForMaths
    hs-source-dirs:     src
    c-sources:
        src/Math/Topology/KnotTh/SurfaceGraph/SphereStar/Backtrack.cpp
    extra-libraries:    stdc++
    include-dirs:       src/
    exposed-modules:
        Math.Topology.KnotTh.Algebra,
        Math.Topology.KnotTh.Algebra.Cobordism,
        Math.Topology.KnotTh.Algebra.Cobordism.CobordismMatrix,
        Math.Topology.KnotTh.Algebra.Cobordism.DottedCobordism,
        Math.Topology.KnotTh.Algebra.Dihedral,
        Math.Topology.KnotTh.Algebra.Dihedral.D4,
        Math.Topology.KnotTh.Algebra.Dihedral.Dn,
        Math.Topology.KnotTh.Algebra.Homology,
        Math.Topology.KnotTh.Algebra.PlanarAlgebra,
        Math.Topology.KnotTh.Algebra.PlanarAlgebra.CableAlgebra,
        Math.Topology.KnotTh.Algebra.PlanarAlgebra.Reduction,
        Math.Topology.KnotTh.Algebra.SurfaceDiagram,
        Math.Topology.KnotTh.ChordDiagram,
        Math.Topology.KnotTh.ChordDiagram.Lyndon,
        Math.Topology.KnotTh.EmbeddedLink,
        Math.Topology.KnotTh.Enumeration.DiagramInfo,
        Math.Topology.KnotTh.Enumeration.DiagramInfo.AllDiagramsInfo,
        Math.Topology.KnotTh.Enumeration.DiagramInfo.MinimalDiagramInfo,
        Math.Topology.KnotTh.Enumeration.EquivalenceClasses,
        Math.Topology.KnotTh.Enumeration.SiftByInvariant,
        Math.Topology.KnotTh.Invariants,
        Math.Topology.KnotTh.Invariants.LinkingNumbers,
        Math.Topology.KnotTh.Invariants.KhovanovHomology,
        Math.Topology.KnotTh.Knotted,
        Math.Topology.KnotTh.Knotted.Crossings.Diagram,
        Math.Topology.KnotTh.Knotted.Crossings.Projection,
        Math.Topology.KnotTh.Knotted.Crossings.Singular,
        Math.Topology.KnotTh.Knotted.Crossings.SubTangle,
        Math.Topology.KnotTh.Knotted.EdgeIndicesEncoding,
        Math.Topology.KnotTh.Knotted.Threads,
        Math.Topology.KnotTh.Moves.Moves,
        Math.Topology.KnotTh.Moves.MovesOfELink,
        Math.Topology.KnotTh.Moves.PatternMatching,
        Math.Topology.KnotTh.Moves.AdHoc,
        Math.Topology.KnotTh.SurfaceGraph,
        Math.Topology.KnotTh.SurfaceGraph.Homology,
        Math.Topology.KnotTh.SurfaceGraph.SphereStar,
        Math.Topology.KnotTh.SurfaceGraph.SphereStar.Backtrack,
        Math.Topology.KnotTh.SurfaceLink,
        Math.Topology.KnotTh.Tabulation.CanonicalConstructionPath,
        Math.Topology.KnotTh.Tabulation.LinkDiagrams,
        Math.Topology.KnotTh.Tabulation.TangleDiagramsCascade,
        Math.Topology.KnotTh.Tabulation.TangleFlypeClasses,
        Math.Topology.KnotTh.Tabulation.TangleStarGlue,
        Math.Topology.KnotTh.Tangle
    other-modules:
        Math.Topology.KnotTh.Invariants.HomflyPolynomial,
        Math.Topology.KnotTh.Invariants.KauffmanFPolynomial,
        Math.Topology.KnotTh.Invariants.KauffmanXPolynomial,
        Math.Topology.KnotTh.Invariants.KnotPolynomials,
        Math.Topology.KnotTh.Invariants.KnotPolynomials.KauffmanFStateSum,
        Math.Topology.KnotTh.Invariants.KnotPolynomials.KauffmanXStateSum,
        Math.Topology.KnotTh.Invariants.KnotPolynomials.Surface,
        Math.Topology.KnotTh.Moves.AdHoc.Resting,
        Math.Topology.KnotTh.Moves.ModifyDSL,
        Math.Topology.KnotTh.SurfaceGraph.SurfaceGraphDef,
        Math.Topology.KnotTh.Tabulation.TangleDiagramsCascade.IncrementalTests,
        Math.Topology.KnotTh.Tabulation.TangleDiagramsCascade.RootingTest,
        Math.Topology.KnotTh.Tabulation.TangleFlypeClasses.Flypes,
        Math.Topology.KnotTh.Tangle.CascadeCode,
        Math.Topology.KnotTh.Tangle.GaussCode,
        Math.Topology.KnotTh.Tangle.RootCode,
        Math.Topology.KnotTh.Tangle.TableOfLinks,
        Math.Topology.KnotTh.Tangle.TangleCat,
        Math.Topology.KnotTh.Tangle.TangleDef
    if flag(internal-tests)
        cpp-options:        -DTESTING
        exposed-modules:
            Math.Topology.KnotTh.Invariants.Util.Poly
    else
        other-modules:
            Math.Topology.KnotTh.Invariants.Util.Poly


test-suite TestTangles
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    default-extensions: BangPatterns
    ghc-options:        -Wall -threaded
    ghc-prof-options:   -rtsopts -prof -auto-all -caf-all
    build-depends:
        base >=4.6,
        containers,
        mtl,
        parallel,
        HaskellForMaths,
        HUnit,
        QuickCheck ==2.*,
        test-framework,
        test-framework-hunit,
        test-framework-quickcheck2,
        tangles
    main-is:            TestTangles.hs
    other-modules:
        Math.Topology.KnotTh.Algebra.Cobordism.CobordismMatrix.Test,
        Math.Topology.KnotTh.Algebra.Cobordism.DottedCobordism.Test,
        Math.Topology.KnotTh.Algebra.Cobordism.Test,
        Math.Topology.KnotTh.ChordDiagram.Test,
        Math.Topology.KnotTh.EmbeddedLink.Test,
        Math.Topology.KnotTh.Enumeration.Applied.Test,
        Math.Topology.KnotTh.Invariants.Test,
        Math.Topology.KnotTh.Tabulation.Test,
        Math.Topology.KnotTh.Tangle.Test,
        TestUtil.Table
    hs-source-dirs:     test
    if flag(internal-tests)
        cpp-options:        -DTESTING


benchmark TangleGeneratorBenchmark
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    default-extensions: BangPatterns
    ghc-options:        -threaded
    ghc-prof-options:   -rtsopts -prof -auto-all -caf-all
    build-depends:
        base >=4.6,
        mtl,
        containers,
        HUnit,
        tangles
    main-is:            TangleGeneratorBenchmark.hs
    hs-source-dirs:     test


benchmark KnotPolynomialsBenchmark
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    default-extensions: BangPatterns
    ghc-options:        -threaded
    ghc-prof-options:   -rtsopts -prof -auto-all -caf-all
    build-depends:
        base >=4.6,
        array,
        mtl,
        containers,
        criterion,
        HUnit,
        tangles
    main-is:            KnotPolynomialsBenchmark.hs
    hs-source-dirs:     test
